--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,13 @@ h2{
     font-family: 'American Typewriter', serif;
     font-family: 'American Typewriter', serif;
 }
+.projects { 
+    display:flex; flex-wrap:wrap; 
+}
+.project {
+width: 30%;
+margin: 10px;
+padding: 20px 10px;
+background: white; /* pick a color */
+border-radius: 25%;
+}
