Project Management 04: Sketches and CSS updates

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,15 @@ h2{
 width: 30%;
 margin: 10px;
 padding: 20px 10px;
-background: white; /* pick a color */
+background: white; 
 border-radius: 25%;
+
 }
+.project img{
+    width: 300px;
+    height: 300px;
+    margin: 10px;
+    border: 3px solid purple; 
+    display: block;
+    margin: auto;
+    }
