--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,11 @@ border-radius: 25%;
     display: block;
     margin: auto;
     }
+a { 
+    text-decoration: none;
+    color: magenta;
+    }
+.project p { 
+    text-align: center;
+    margin: 15px;
+    }
